--- a/user-service.properties
+++ b/user-service.properties
@@ -2,4 +2,4 @@ spring.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:userDB
 spring.datasource.username=sa
 spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect;
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
