--- a/user-service.properties
+++ b/user-service.properties
@@ -1,4 +1,4 @@
-spring.console.enabled=true
+spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:userDB
 spring.datasource.username=sa
 spring.datasource.password=password
